src/objects/District__c.object
<CustomObject>
    <fields>
        <fullName>Country_Name__c</fullName>
        <formula>HYPERLINK( State_Name__r.Country_Name__r.Id,State_Name__r.Country_Name__r.Name)+&apos;-&gt;&apos;+ HYPERLINK(State_Name__r.Id,State_Name__r.Name )+&apos;-&gt;&apos;+  Name</formula>
        <label>Country Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District_Pin_Code__c</fullName>
        <label>District Pin Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Name__c</fullName>
        <label>State Name</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Districts</relationshipLabel>
        <relationshipName>Districts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>District</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>District Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Districts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>